crates/ignis_driver/tests/snapshots/e2e_ok__builtin_name_shadowed_binding_member_access.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
assertion_line: 19
expression: "common::format_e2e_result(&result)"
---
exit_code: 8
stdout: (empty)
stderr: (empty)
