crates/ignis_driver/tests/snapshots/e2e_ok__char_unicode_scalar_argument_and_return_round_trip.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
assertion_line: 19
expression: "common::format_e2e_result(&result)"
---
exit_code: 42
stdout: (empty)
stderr: (empty)
