crates/ignis_driver/tests/snapshots/e2e_ok__clone_does_not_move.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 84
stdout: (empty)
stderr: (empty)
