crates/ignis_driver/tests/snapshots/e2e_ok__closure_capture_override_move.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 10
stdout: (empty)
stderr: (empty)
