crates/ignis_driver/tests/snapshots/e2e_ok__closure_const_module_level.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 25
stdout: (empty)
stderr: (empty)
