crates/ignis_driver/tests/snapshots/e2e_ok__closure_field_assign_on_captured_record.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
assertion_line: 19
expression: "common::format_e2e_result(&result)"
---
exit_code: 0
stdout: (empty)
stderr: (empty)
